gitops/platform/argocd-access/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: edge
      sectionName: https
  hostnames:
    - argocd.hiraya.noidilin.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
